# dmarc-reporter

./: .gitignore  LICENSE  README.md  dmarc-build-reports  dmarc-sync  pyproject.toml  requirements-dev.txt  requirements.txt  setup
src/dmarc_reporter/: __init__.py  __main__.py  cli.py  config.py  logging.py
src/dmarc_reporter/gmail/: auth.py  client.py  queries.py
src/dmarc_reporter/ingest/: __init__.py  attachments.py  dedupe.py  parser.py  pipeline.py
src/dmarc_reporter/reporting/: __init__.py  aggregations.py  builder.py  manifest.py  periods.py
src/dmarc_reporter/storage/: repository.py  reset.py  schema.py
src/dmarc_reporter/web/: app.js  index.html.j2  index.js  styles.css  template.html.j2
tests/contract/: test_cli_contract.py
tests/fixtures/dmarc/: aggregate-report.xml
tests/fixtures/gmail/: message-detail.json  message-list.json
tests/integration/: test_ingest_run.py  test_report_artifacts.py  test_report_index.py  test_report_regeneration.py  test_reset_flag.py  test_resume_behavior.py
tests/unit/: test_aggregations.py  test_dedupe.py  test_parser.py  test_periods.py  test_report_catalog.py
